--- a/Dwar.UI/MainWindow.xaml
+++ b/Dwar.UI/MainWindow.xaml
@@ -4,9 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dwar.UI"
+        xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Loaded="OnWindowLoaded">
     <Grid>
-
+        <Button Click="OnTestClick" HorizontalAlignment="Left" Width="120" Height="22" Margin="5" VerticalAlignment="Top">Test</Button>
+        <Button Click="OnOpenBotClick" HorizontalAlignment="Left" Width="120" Height="22" Margin="150,5,5,5" VerticalAlignment="Top">Open Bot</Button>
+        <wv2:WebView2 Name="_webView"
+                  Source="https://dwarlegacy.ru/" Margin="0,40,0,0" />
     </Grid>
 </Window>
