--- a/Dwar.UI/MainWindow.xaml
+++ b/Dwar.UI/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:Dwar.UI"
         xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
         mc:Ignorable="d"
+        WindowState="Maximized"
         Title="MainWindow" Height="450" Width="1200" Loaded="OnWindowLoaded">
     <Grid>
         <Menu HorizontalAlignment="Left" VerticalAlignment="Top">
